--- a/countdown-timer/style.css
+++ b/countdown-timer/style.css
@@ -6,10 +6,47 @@ h1{
 
 }
 
+h2{
+   font-weight:20em;
+
+}
 body{
     background-color:#3AAFA9;
     text-align:center;
     font-size:1.5em;
+
+}
+
+div{
+   text-align:center;
+   display:inline-block;
+
+}
+#day-c{
+   margin: 2rem;
+
+
+
+}
+
+
+#month-c{
+   margin: 2rem;
+
+}
+
+#min-c{
+   margin: 2rem;
+
+}
+
+#hours-c{
+   margin:2rem;
+
+}
+
+#second-c{
+   margin: 2rem;
 
 }
 
