--- a/recipe-app/style.css
+++ b/recipe-app/style.css
@@ -72,20 +72,6 @@ header button {
     width: 75px;
 }
 
-.fav-meals li .clear {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    opacity: 0;
-    position: absolute;
-    top: -0.5rem;
-    right: -0.5rem;
-    font-size: 1.2rem;
-}
-
-.fav-meals li:hover .clear {
-    opacity: 1;
-}
 
 .fav-meals li img {
     border: 2px solid #ffffff;
@@ -143,56 +129,8 @@ header button {
     margin: 0;
 }
 
-.meal-body .fav-btn {
-    border: none;
-    background-color: transparent;
-    color: rgb(197, 188, 188);
-    cursor: pointer;
-    font-size: 1.2rem;
-}
 
-.meal-body .fav-btn.active {
-    color: rebeccapurple;
-}
+.fav-button{
+    background-color:green;
 
-.popup-container {
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
-
-.popup-container.hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.popup {
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 0 2rem;
-    position: relative;
-    overflow: auto;
-    max-height: 100vh;
-    max-width: 600px;
-    width: 100%;
-}
-
-.popup .close-popup {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 1.5rem;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-}
-
-.meal-info h1 {
-    text-align: center;
 }
