--- a/recipe-app/style.css
+++ b/recipe-app/style.css
@@ -121,6 +121,7 @@ header button {
 .meal-body {
     display: flex;
     align-items: center;
+    text-align:center;
     justify-content: space-between;
     padding: 1rem;
 }
@@ -142,6 +143,7 @@ header button {
     color: rebeccapurple;
     font-size:20px;
 }
+
 button{
     background-color: transparent;
     border: none;
@@ -149,5 +151,27 @@ button{
     font-size: 1.5rem;
     margin-left: 10px;
     position:relative;
+
+}
+
+.class-pop-up{
+
+
+}
+
+.class-pop-up.deactive{
+    opacity:0;
+    pointer-events:none;
+
+}
+
+.info-body{
+
+}
+
+.info-head{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
 
 }
