--- a/recipe-app/style.css
+++ b/recipe-app/style.css
@@ -166,6 +166,12 @@ button{
 }
 
 .info-body{
+    background: #ece9e6;
+    background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+    background: linear-gradient(to right, #ffffff, #ece9e6);
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    position:relative;
 
 }
 
@@ -173,5 +179,11 @@ button{
     display:flex;
     justify-content:space-between;
     align-items:center;
+
+}
+
+.info-head img{
+    height:200px;
+    width:50%;
 
 }
